chore: auto-sync [2026-04-09 06:37 UTC] — 27 source files, 64 artifacts
